--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}AnyVenue{% endblock %}</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
     </head>
 <body>
     <div class="container">
@@ -14,6 +16,5 @@
     <footer>
         <p>© 2025 AnyVenue. All rights reserved.</p>
     </footer>
-
-    </body>
+</body>
 </html>
