--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}AnyVenue{% endblock %}</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    </head>
+
+
+    <!-- Roboto font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
 <body>
     <div class="container">
         {% block content %}
@@ -17,4 +23,5 @@
         <p>© 2025 AnyVenue. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
