--- a/landing/templates/sections/header.html
+++ b/landing/templates/sections/header.html
@@ -27,7 +27,7 @@
                     data-icon-position="No icon" 
                     data-small="False" 
                     data-style="Primary" 
-                    class="Button px-6 py-3 bg-white hover:bg-gray-100 transition-colors flex justify-center items-center gap-2 cursor-pointer">
+                    class="Button px-6 py-3 bg-white border border-white hover:bg-gray-100 transition-colors flex justify-center items-center gap-2 cursor-pointer">
                 <div data-layer="Button" class="Button justify-start text-[#1E3A8A99] text-base font-normal leading-normal">Login</div>
             </div>
             
