Resolve merge conflict in landing.html

--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -17,4 +17,7 @@
 <!-- Section 4: Features Review -->
 {% include "sections/features_review.html" %}
 
+<!-- Footer Section -->
+{% include "footer.html" %}
+
 {% endblock content %}
