--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -14,8 +14,11 @@
 <!-- Section 3: Booking Preview -->
 {% include "sections/booking_preview.html" %}
 
-<!-- Section 4: Features Review -->
-{% include "sections/features_review.html" %}
+<!-- Section 4: Reviews Preview -->
+{% include "sections/reviews_preview.html" %}
+
+<!-- Section 5: Events Preview -->
+{% include "sections/events_preview.html" %}
 
 <!-- Footer Section -->
 {% include "footer.html" %}
