Update landing section templates

--- a/landing/templates/sections/booking_preview.html
+++ b/landing/templates/sections/booking_preview.html
@@ -212,8 +212,8 @@
                 </div>
             </div>
             <div class="flex flex-col justify-start items-start gap-4">
-                <div data-alternate="True" data-icon-position="No icon" data-small="False" data-style="Secondary" class="px-6 py-3 outline outline-1 outline-Color-White inline-flex justify-center items-center gap-2">
-                    <div class="justify-start text-Color-White text-base font-normal font-['Roboto'] leading-normal">View all</div>
+                <div data-alternate="True" data-icon-position="No icon" data-small="False" data-style="Secondary" class="px-6 py-3 outline outline-1 outline-white inline-flex justify-center items-center gap-2">
+                    <div class="justify-start text-white text-base font-normal font-['Roboto'] leading-normal">View all</div>
                 </div>
             </div>
         </div>
