--- a/landing/templates/sections/features_preview.html
+++ b/landing/templates/sections/features_preview.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="w-full px-6 sm:px-12 md:px-16 py-28 bg-gradient-to-b from-Light-Navy to-neutral-lightest-new flex flex-col justify-start items-center gap-20 overflow-hidden">
+<div class="w-full px-6 sm:px-12 md:px-16 py-28 bg-gradient-to-b from-[#3D5A80] to-[#A5B1C1] flex flex-col justify-start items-center gap-20 overflow-hidden">
     <div class="w-full max-w-[1280px] flex flex-col justify-start items-center gap-20">
 
         <!-- Judul -->
