--- a/landing/templates/sections/features_review.html
+++ b/landing/templates/sections/features_review.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 
-<section class="relative w-full bg-[#A5B1C1] py-28 text-white">
+<section class="relative w-full bg-gradient-to-b from-[#A5B1C1] to-[#3D5A80] py-28 text-white">
 
-    <div class="gradient-overlay"></div>
+    <!-- <div class="gradient-overlay"></div> -->
 
     <div class="content-wrapper container mx-auto flex max-w-7xl flex-col items-start gap-20 px-4 sm:px-6 lg:px-8">
         
