--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <footer class="w-full bg-gray-50 border-t border-gray-200">
     <div data-breakpoint="Desktop" class="w-full px-16 py-20 bg-[#F2F2F2] inline-flex flex-col justify-start items-center gap-8 overflow-hidden">
         <div class="w-full max-w-[1280px] flex flex-col justify-start items-start gap-20">
@@ -7,13 +7,9 @@
 
                     <!-- Kiri: logo & teks -->
                     <div class="w-full lg:w-[500px] inline-flex flex-col justify-start items-start gap-6">
-                        <div data-alternate="False" class="w-20 h-9 relative overflow-hidden mx-auto lg:mx-0">
-                            <div class="w-16 h-9 left-[6.67px] top-0 absolute overflow-hidden">
-                                <div class="w-5 h-4 left-[50.82px] top-[10.87px] absolute bg-black"></div>
-                                <div class="w-5 h-6 left-[34.33px] top-[11.32px] absolute bg-black"></div>
-                                <div class="w-5 h-4 left-[18.55px] top-[10.87px] absolute bg-black"></div>
-                                <div class="w-5 h-4 left-0 top-[10.24px] absolute bg-black"></div>
-                                <div class="w-4 h-2.5 left-[1.15px] top-0 absolute bg-black"></div>
+                        <div class="w-full h-9 relative overflow-hidden mx-auto lg:mx-0">
+                            <div class="text-2xl font-bold text-black tracking-wide transition-colors duration-300">
+                                AnyVenue
                             </div>
                         </div>
                         <div class="self-stretch text-center lg:text-left text-black text-base font-normal font-['Roboto'] leading-normal">
@@ -51,25 +47,23 @@
                             <div class="text-black text-base font-semibold font-['Roboto'] leading-normal">Follow Us</div>
                             <div class="flex flex-col justify-start items-start">
                                 <div class="py-2 flex justify-start items-center gap-3">
-                                    <div class="py-2 flex justify-start items-center gap-3">
-                                        <img src="./static/image/icons/Facebook.svg" alt="Facebook" class="w-6 h-6">
-                                        <div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Facebook</div>
-                                    </div>
+                                    <img src="{% static 'image/icons/Facebook.svg' %}" alt="Facebook" class="w-6 h-6">
+                                    <div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Facebook</div>
                                 </div>
                                 <div class="py-2 flex justify-start items-center gap-3">
-                                    <img src="./static/image/icons/Instagram.svg" alt="Instagram" class="w-6 h-6">
+                                    <img src="{% static 'image/icons/Instagram.svg' %}"  alt="Instagram" class="w-6 h-6">
                                     <div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Instagram</div>
                                 </div>
                                 <div class="py-2 flex justify-start items-center gap-3">
-                                    <img src="./static/image/icons/X.svg" alt="X" class="w-6 h-6">
+                                    <img src="{% static 'image/icons/X.svg' %}" alt="X" class="w-6 h-6">
                                     <div class="text-black text-sm font-normal font-['Roboto'] leading-tight">X</div>
                                 </div>
                                 <div class="py-2 flex justify-start items-center gap-3">
-                                    <img src="./static/image/icons/LinkedIn.svg" alt="Linkedin" class="w-6 h-6">
+                                    <img src="{% static 'image/icons/LinkedIn.svg' %}"  alt="Linkedin" class="w-6 h-6">
                                     <div class="text-black text-sm font-normal font-['Roboto'] leading-tight">LinkedIn</div>
                                 </div>
                                 <div class="py-2 flex justify-start items-center gap-3">
-                                    <img src="./static/image/icons/Youtube.svg" alt="Youtube" class="w-6 h-6">
+                                    <img src="{% static 'image/icons/Youtube.svg' %}"  alt="Youtube" class="w-6 h-6">
                                     <div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Youtube</div>
                                 </div>
                             </div>
