--- a/landing/templates/sections/booking_preview.html
+++ b/landing/templates/sections/booking_preview.html
@@ -11,10 +11,10 @@
             </div>
         </div>
         <div class="self-stretch flex flex-col justify-start items-center gap-16">
-            <div class="self-stretch inline-flex justify-start items-start gap-8">
+            <div class="self-stretch flex flex-col md:flex-row justify-start items-start gap-8">
                 <div class="flex-1 inline-flex flex-col justify-start items-center gap-8">
                     <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
-                        <img class="self-stretch h-56" src="https://placehold.co/405x228" />
+                        <img class="self-stretch h-56 object-cover" src="https://placehold.co/405x228" />
                         <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
                             <div class="self-stretch flex flex-col justify-start items-start gap-4">
                                 <div class="self-stretch flex flex-col justify-start items-start gap-2">
@@ -46,79 +46,13 @@
                         </div>
                     </div>
                     <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
-                        <img class="self-stretch h-56" src="https://placehold.co/405x228" />
+                        <img class="self-stretch h-56 object-cover" src="https://placehold.co/405x228" />
                         <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
                             <div class="self-stretch flex flex-col justify-start items-start gap-4">
                                 <div class="self-stretch flex flex-col justify-start items-start gap-2">
                                     <div class="self-stretch justify-start text-black text-2xl font-bold font-['Roboto'] leading-loose">venue name</div>
                                     <div class="self-stretch justify-start text-black text-base font-normal font-['Roboto'] leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
                                 </div>
-                                <div class="self-stretch h-7 inline-flex justify-start items-start gap-2 flex-wrap content-start">
-                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
-                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag one</div>
-                                    </div>
-                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
-                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag two</div>
-                                    </div>
-                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
-                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag three</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
-                                <div data-alternate="False" data-icon-position="Trailing" data-small="False" data-style="Link" class="inline-flex justify-center items-center gap-2">
-                                    <div class="justify-start text-black text-base font-normal font-['Roboto'] leading-normal">View </div>
-                                    <div class="w-6 h-6 relative overflow-hidden flex justify-center items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="flex-1 inline-flex flex-col justify-start items-center gap-8">
-                    <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
-                        <img class="self-stretch h-96" src="https://placehold.co/405x405" />
-                        <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
-                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
-                                <div class="self-stretch flex flex-col justify-start items-start gap-2">
-                                    <div class="self-stretch justify-start text-black text-2xl font-bold font-['Roboto'] leading-loose">venue name here</div>
-                                    <div class="self-stretch justify-start text-black text-base font-normal font-['Roboto'] leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-                                </div>
-                                <div class="self-stretch inline-flex justify-start items-start gap-2 flex-wrap content-start">
-                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
-                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag one</div>
-                                    </div>
-                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
-                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag two</div>
-                                    </div>
-                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
-                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag three</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
-                                <div data-alternate="False" data-icon-position="Trailing" data-small="False" data-style="Link" class="inline-flex justify-center items-center gap-2">
-                                    <div class="justify-start text-black text-base font-normal font-['Roboto'] leading-normal">View </div>
-                                    <div class="w-6 h-6 relative overflow-hidden flex justify-center items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
-                        <img class="self-stretch h-56" src="https://placehold.co/405x228" />
-                        <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
-                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
-                                <div class="self-stretch flex flex-col justify-start items-start gap-2">
-                                    <div class="self-stretch justify-start text-black text-2xl font-bold font-['Roboto'] leading-loose">venue name here</div>
-                                    <div class="self-stretch justify-start text-black text-base font-normal font-['Roboto'] leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-                                </div>
                                 <div class="self-stretch inline-flex justify-start items-start gap-2 flex-wrap content-start">
                                     <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
                                         <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag one</div>
@@ -146,7 +80,7 @@
                 </div>
                 <div class="flex-1 inline-flex flex-col justify-start items-center gap-8">
                     <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
-                        <img class="self-stretch h-56" src="https://placehold.co/405x228" />
+                        <img class="self-stretch h-96 object-cover" src="https://placehold.co/405x405" />
                         <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
                             <div class="self-stretch flex flex-col justify-start items-start gap-4">
                                 <div class="self-stretch flex flex-col justify-start items-start gap-2">
@@ -178,7 +112,73 @@
                         </div>
                     </div>
                     <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
-                        <img class="self-stretch h-56" src="https://placehold.co/405x228" />
+                        <img class="self-stretch h-56 object-cover" src="https://placehold.co/405x228" />
+                        <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
+                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
+                                <div class="self-stretch flex flex-col justify-start items-start gap-2">
+                                    <div class="self-stretch justify-start text-black text-2xl font-bold font-['Roboto'] leading-loose">venue name here</div>
+                                    <div class="self-stretch justify-start text-black text-base font-normal font-['Roboto'] leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
+                                </div>
+                                <div class="self-stretch inline-flex justify-start items-start gap-2 flex-wrap content-start">
+                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
+                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag one</div>
+                                    </div>
+                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
+                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag two</div>
+                                    </div>
+                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
+                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag three</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
+                                <div data-alternate="False" data-icon-position="Trailing" data-small="False" data-style="Link" class="inline-flex justify-center items-center gap-2">
+                                    <div class="justify-start text-black text-base font-normal font-['Roboto'] leading-normal">View </div>
+                                    <div class="w-6 h-6 relative overflow-hidden flex justify-center items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-1 inline-flex flex-col justify-start items-center gap-8">
+                    <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
+                        <img class="self-stretch h-56 object-cover" src="https://placehold.co/405x228" />
+                        <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
+                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
+                                <div class="self-stretch flex flex-col justify-start items-start gap-2">
+                                    <div class="self-stretch justify-start text-black text-2xl font-bold font-['Roboto'] leading-loose">venue name here</div>
+                                    <div class="self-stretch justify-start text-black text-base font-normal font-['Roboto'] leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
+                                </div>
+                                <div class="self-stretch inline-flex justify-start items-start gap-2 flex-wrap content-start">
+                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
+                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag one</div>
+                                    </div>
+                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
+                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag two</div>
+                                    </div>
+                                    <div data-alternate="False" data-icon-position="No Icon" data-text-only="False" class="px-2 py-1 bg-neutral-lightest-new flex justify-start items-start">
+                                        <div class="justify-start text-black text-sm font-semibold font-['Roboto'] leading-tight">Tag three</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="self-stretch flex flex-col justify-start items-start gap-4">
+                                <div data-alternate="False" data-icon-position="Trailing" data-small="False" data-style="Link" class="inline-flex justify-center items-center gap-2">
+                                    <div class="justify-start text-black text-base font-normal font-['Roboto'] leading-normal">View </div>
+                                    <div class="w-6 h-6 relative overflow-hidden flex justify-center items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="self-stretch bg-[#FFFFFF] outline outline-1 outline-[#000000] flex flex-col justify-start items-start overflow-hidden">
+                        <img class="self-stretch h-56 object-cover" src="https://placehold.co/405x228" />
                         <div class="self-stretch p-6 flex flex-col justify-start items-start gap-6">
                             <div class="self-stretch flex flex-col justify-start items-start gap-4">
                                 <div class="self-stretch flex flex-col justify-start items-start gap-2">
