--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 <footer class="w-full bg-gray-50 border-t border-gray-200">
-    <div data-breakpoint="Desktop" class="w-full px-16 py-20 bg-[#F2F2F2] inline-flex flex-col justify-start items-center gap-8 overflow-hidden">
+    <div data-breakpoint="Desktop" class="w-full px-16 py-20 bg-[#EFEFEF] inline-flex flex-col justify-start items-center gap-8 overflow-hidden">
         <div class="w-full max-w-[1280px] flex flex-col justify-start items-start gap-20">
             <div class="self-stretch flex flex-col justify-start items-start gap-8">
                 <div class="self-stretch p-12 outline outline-1 outline-offset-[-1px] outline-Color-Scheme-1-Border flex flex-col lg:flex-row justify-start items-start gap-16 lg:gap-32">
