--- a/landing/templates/sections/reviews_preview.html
+++ b/landing/templates/sections/reviews_preview.html
@@ -9,7 +9,7 @@
     <div class="content-wrapper container mx-auto flex max-w-7xl flex-col items-start gap-20 px-4 sm:px-6 lg:px-8">
         
         <div class="max-w-xl">
-            <h2 class="text-5xl font-bold leading-tight">Hear It from Our Partner!</h2>
+            <h2 class="text-5xl font-bold leading-tight [text-shadow:_0px_4px_10px_rgb(0_0_0_/_0.75)]">Hear It from Our Partner!</h2>
             <p class="mt-6 text-lg leading-relaxed">Rasakan kepercayaan dari ribuan pengguna yang telah bergabung di AnyVenue.</p>
         </div>
 
