--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -9,7 +9,7 @@
     <div class="w-full flex-grow px-4 sm:px-8 md:px-16 pb-4 bg-gradient-to-b from-Light-Navy to-Flash-White flex flex-col justify-between items-center gap-16 sm:gap-24 md:gap-36 overflow-hidden">
 
         <!-- NAVBAR -->
-        <div class="w-full max-w-[1280px] h-16 flex flex-col justify-center items-center overflow-hidden">
+        <div class="w-full max-w-[1280px] max-h-20 flex flex-col justify-center items-center overflow-hidden">
             <div class="w-full flex flex-wrap justify-between items-center gap-4 sm:gap-8 overflow-hidden px-4 sm:px-0">
                 <div class="flex-1 flex justify-start items-start">
                     <a href="/" id="brand-link" class="text-2xl font-bold text-white tracking-wide transition-colors duration-300">
