--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- Action Button -->
-        <a href="/login" id="login-button" class="px-6 py-2 border border-white text-base font-normal text-white hover:bg-white hover:text-[#000456] transition-colors duration-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
+        <a href="auth/login" id="login-button" class="px-6 py-2 border border-white text-base font-normal text-white hover:bg-white hover:text-[#000456] transition-colors duration-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
             Login
         </a>
     </div>
