--- a/landing/templates/sections/reviews_preview.html
+++ b/landing/templates/sections/reviews_preview.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<section class="relative w-full bg-gradient-to-b from-[#A5B1C1] to-[#3D5A80] py-28 text-white">
+<section id="reviews" class="relative w-full bg-gradient-to-b from-[#A5B1C1] to-[#3D5A80] py-28 text-white">
 
     <!-- <div class="gradient-overlay"></div> -->
 
