--- a/landing/templates/sections/header.html
+++ b/landing/templates/sections/header.html
@@ -21,12 +21,12 @@
         </div>
 
         <div class="inline-flex justify-start items-start gap-4">
-            <a href="#" {% comment %} Ganti # dengan URL login {% endcomment %}
+            <a href="auth/login"  
                class="px-6 py-3 bg-white border border-white hover:bg-gray-100 transition-colors flex justify-center items-center gap-2 cursor-pointer">
                <span class="justify-start text-[#1E3A8A99] text-base font-normal leading-normal">Login</span>
             </a>
 
-            <a href="#" {% comment %} Ganti # dengan URL explore {% endcomment %}
+            <a data-scroll="features" {% comment %} Ganti # dengan URL explore {% endcomment %}
                class="px-6 py-3 border border-white hover:bg-white/10 transition-colors flex justify-center items-center gap-2 cursor-pointer">
                <span class="justify-start text-white text-base font-normal leading-normal">Explore</span>
             </a>
